--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 8px;
 }
 
 .profile-image {
@@ -35,6 +39,8 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-left: auto;
+  margin-right: 8px;
 }
 
 a {
@@ -45,4 +51,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding: 0 0 0 16px;
+  margin: 0px;
+  gap: 16px;
 }
